# taggui

./: README.md  pyproject.toml  taggui.spec
taggui/: run_gui.py
taggui/auto_captioning/: auto_captioning_model.py  captioning_thread.py  models_list.py
taggui/auto_captioning/models/: florence_2.py  joycaption.py  kosmos_2.py  llava_1_point_5.py  llava_llama_3.py  llava_next.py  moondream.py  phi_3_vision.py  wd_tagger.py
taggui/dialogs/: batch_reorder_tags_dialog.py  caption_multiple_images_dialog.py  find_and_replace_dialog.py  settings_dialog.py
taggui/models/: bulk_tag_controller.py  image_list_model.py  proxy_image_list_model.py  proxy_selection_tags_model.py  proxy_tag_counter_model.py  selection_tags_model.py  tag_counter_model.py
taggui/utils/: big_widgets.py  filter_parser.py  logging_setup.py  settings_widgets.py  utils.py
taggui/widgets/: all_tags_editor.py  auto_captioner.py  image_list.py  image_tags_editor.py  image_viewer.py  main_window.py  tag_audit_window.py
