[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taggui"
version = "1.39.0"
description = "Cross-platform desktop application for quickly adding and editing image tags and captions for generative AI image datasets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "jhc13" }]
keywords = ["image-tagging", "captioning", "dataset", "generative-ai", "stable-diffusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "accelerate==1.10.1",
    "bitsandbytes==0.48.1; platform_system != 'Darwin'",
    "ExifRead==3.5.1",
    "imagesize==1.4.1",
    "pillow==11.3.0",
    "pyparsing==3.2.5",
    "PySide6==6.10.0",
    "transformers==4.48.3",
    # Florence-2
    "timm==1.0.20",
    # WD Tagger
    "huggingface-hub==0.35.3",
    "onnxruntime==1.23.1",
    # PyTorch (Linux/macOS use the standard wheel; Windows users should
    # install the CUDA wheel manually – see README).
    "torch==2.8.0",
]

[project.optional-dependencies]
# FlashAttention requires torch and CUDA toolkit to be present at build time.
# It does not install cleanly via plain pip/uv resolution, so it is opt-in.
# Install with:
#   uv pip install --no-build-isolation flash-attn==2.8.3
# (see README for details)
flash-attn = ["flash-attn==2.8.3"]

[project.scripts]
taggui = "taggui.run_gui:main"

[project.urls]
Homepage = "https://github.com/jhc13/taggui"
Repository = "https://github.com/jhc13/taggui"
Issues = "https://github.com/jhc13/taggui/issues"

[tool.setuptools.packages.find]
include = ["taggui*"]
exclude = ["clip-vit-base-patch32*", "images*"]

[tool.setuptools.package-data]
taggui = [
    "resources/images/*",
    "resources/clip-vit-base-patch32/*",
]
